--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
   --footerBackground: var(--black);
   /*--cancelButton: var(--white);*/
 
-  /* Styles */
+  /* Styles oh */
   --line: solid 2px var(--lineColor);
 
   /* Type */
